@@ -2,13 +2,11 @@ package githappens.hh.project_management_app.web;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.Collections;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.RestController;
 import githappens.hh.project_management_app.domain.AppUser;
 import githappens.hh.project_management_app.domain.AppUserRepository;
 import githappens.hh.project_management_app.domain.Project;
-import githappens.hh.project_management_app.domain.ProjectRepository;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -17,11 +15,9 @@ import org.springframework.web.bind.annotation.RequestBody;
 @RestController
 public class AppUserRestController {
     private final AppUserRepository appUserRepository;
-    private final ProjectRepository projectRepository;
 
-    public AppUserRestController(AppUserRepository appUserRepository, ProjectRepository projectRepository) {
+    public AppUserRestController(AppUserRepository appUserRepository) {
         this.appUserRepository = appUserRepository;
-        this.projectRepository = projectRepository;
     }
 
     @GetMapping("/api/users")
@@ -37,8 +33,8 @@ public class AppUserRestController {
     @GetMapping("/api/users/{userId}/projects")
     public Iterable<Project> getProjectsForUser(@PathVariable Long userId) {
         return appUserRepository.findById(userId)
-                .map(user -> projectRepository.findByAssignedUser(user))
-                .orElse(Collections.emptyList());
+                .map(AppUser::getProjects)
+                .orElse(List.of());
     }
 
     @PostMapping("/api/users")
